image overflow on mobile fix!!! ✨

--- a/style/section-stats.css
+++ b/style/section-stats.css
@@ -73,17 +73,21 @@
     }
 
     .section-stats .stats-container .stats-img{
+        min-width: auto;
+        min-height: auto;
         width: 100%;
-        height: 50%;
-        max-width: none;
-        max-height: none;
-
-        display: block;
+        height: 100%;
+    
+        padding: 0;
         margin: 0;
+        z-index: 1;
+    
+        object-fit: cover;
+        object-position: bottom;
     }
 
     .section-stats .info-box {
-        margin-left: -5vw;
+        margin-left: 8vw;
         
     }    
 
