--- a/style/section-zoom.css
+++ b/style/section-zoom.css
@@ -8,6 +8,8 @@
 }
 
 .grid-container {
+    width: 100%;
+
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(2, 1fr);
     align-items: center;
@@ -16,20 +18,10 @@
     justify-items: center;
 }
 
-.s7-img {
-    height: 100vh;
-    width: 100%;
-
-    background: pink;
-
-    z-index: 1;
-}
-
-.section-7 .s7-img img {
+.section-7 .s7-img {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    transform: rotate(0deg);
 }
 
 .section-7 .grid-container .info-box {
@@ -54,8 +46,10 @@
 @media screen and (max-width: 800px) {
 
     .grid-container {
+        width: 100%;
+
         display: grid;
-        grid-template: repeat(4, 50vh) / repeat(1, 1fr);
+        grid-template: repeat(4, 50vh) / repeat(1, 100%);
         align-items: center;
         justify-content: center;
         align-content: stretch;
@@ -67,7 +61,7 @@
         height: 100%;
     }
 
-    .section-7 .grid-container .info-box:nth-of-type(3) {
+    .section-7 .grid-container .info-box:nth-of-type(2) {
         order: 1;
     }
 
